bk_ida/gccida/c3/peephole2_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56277:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56278:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56281:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56287:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
teml = gen_peephole2_1246( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56302:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56303:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56314:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temm = gen_peephole2_1249( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56324:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56330:59: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( *_pmatch_len = 0, ( temn = gen_peephole2_1252( insn, recog_data_0.operand)) == 0LL) ) 
                                                          ^~~~~~~~~~~~
                                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56339:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56340:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56343:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56349:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temi = gen_peephole2_1245( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56364:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56365:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56376:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
temj = gen_peephole2_1248( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56386:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56392:59: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( *_pmatch_len = 0, ( temk = gen_peephole2_1251( insn, recog_data_0.operand)) == 0LL) ) 
                                                          ^~~~~~~~~~~~
                                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/insn-recog.c:56401:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_1/src/obj/insn-recog.o] Error 1
